--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ html{
 }
 body{
 font-family: 'Tajawal';
+width: 100%;
 }
 nav{
     background-color: #f9fafc;
@@ -116,17 +117,17 @@ form{
     margin: 5px;
     background-color: #484848;
     border-radius: 5px;
-    font-family: 'Tajawal',sans-serif;
+    
 }
 form input{
 width: 100%;
-height: 35px;
+padding: 10px;
 border-radius: 5px;
-border:none
+border:none;
+font-family: 'Tajawal';
 }
 form button{
-    
-    height: 35px;
+    font-family: 'Tajawal';
     margin: 5px 0;
     margin-right: auto;
     padding: 10px;
@@ -140,6 +141,10 @@ form button{
 .fonts h4, .fonts div{
     width: 22%;
 }
+.down{
+    width: 100%;
+    background-color: #e6e6e6;
+}
 .down-footer{
     
     display: flex;
@@ -147,4 +152,84 @@ form button{
     padding: 45px;
     width: 90%;
     margin-right: auto;
+}
+form{
+    position: relative;
+}
+form .fa-lock{
+    color: #484848;
+    opacity: 0.5;
+    position: absolute;
+    font-size: 23px;
+    left: 20px;
+    top: 20px;
+}
+
+
+/* SLIDER */
+.slider-holder
+{
+	width: 800px;
+	height: 400px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 0px;
+	text-align: center;
+	overflow: hidden;
+}
+
+.image-holder
+{
+	width: 2400px;
+	background-color: #a2a4a6;
+	height: 400px;
+	clear: both;
+	position: relative;
+   
+	-webkit-transition: left 2s;
+	-moz-transition: left 2s;
+	-o-transition: left 2s;
+	transition: left 2s;
+}
+
+.slider-image
+{
+	float: left;
+	margin: 0px;
+	padding: 0px;
+	position: relative;
+}
+.slider-image a{
+    
+    width: 20px;
+    height: 20px;
+}
+#slider-image-1:target ~ .image-holder
+{
+	left: 0px;
+}
+
+#slider-image-2:target ~ .image-holder
+{
+	left: +800px;
+}
+
+#slider-image-3:target ~ .image-holder
+{
+	left: +1600px;
+}
+
+.button-holder
+{
+	position: relative;
+	top: -20px;
+}
+
+.slider-change
+{
+	display: inline-block;
+	height: 10px;
+	width: 10px;
+	
+	background-color: #a2a4a6;
 }
