--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,7 @@ form .fa-lock{
 	position: relative;
 	overflow: hidden;
 	height: 100%; /* Or set a fixed height */
+    overflow: hidden;
 }
 
 /* SLIDER */
