--- a/css/signup.css
+++ b/css/signup.css
@@ -89,6 +89,7 @@ small{
     font-weight: 600;
     color: gray;
 }
-.downdown span:last-child{
+.downdown a{
+    text-decoration: none;
     color: blue;
 }
