--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -1,51 +1,45 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-body{
-    direction: rtl;
-    font-family: 'Tajawal';
-}
-body > div{
+
+
+#signup{
     width: 100%;
     height: 100vh;
     background-color: black;
+    display: none;
 }
-form{
+#signup form{
     width: 33%;
     height: 100%;
     margin: auto;
     text-align: center;
     background-color: white;
 }
-.top h2{
+#signup .top h2{
     border-bottom: 1px solid #e5e9f2;
     margin-bottom: 30px;
     padding: 10px;
 }
-.top input{
+#signup .top input{
     padding: 10px;
 }
-.top .num{
+#signup .top .num{
     width: 250px;
     border: none;
     background-color: #eff2f7;
     border-radius: 5px;
 }
-.top .prenum{
+#signup .top .prenum{
     width: 100px;
     border: none;
     background-color: #eff2f7;
     border-radius: 5px;
 }
-input ,button{
+#signup input ,button{
     font-family: 'Tajawal';
 }
-small{
+#signup small{
     text-align: right;
 }
-.mid input{
+#signup .mid input{
     width: 80%;
     border: none;
     border-radius: 5px;
@@ -53,23 +47,23 @@ small{
     padding: 10px;
     margin: 5px;
 }
-.down{
+#signup .down{
     position: relative;
 }
-.down .checkbox1{
+#signup .down .checkbox1{
     display: inline-block;
     position: absolute;
-    top:-5%;
+    top:7%;
     right: -20% ;
-    
+      
 }
-.down .checkbox2{
+#signup .down .checkbox2{
     display: inline-block;
     position: absolute;
-    top:25%;
+    top:32%;
     right: -20% ;    
 }
-.down input{
+#signup .down input{
     width: 80%;
     border: none;
     border-radius: 5px;
@@ -77,19 +71,19 @@ small{
     padding: 10px;
     margin: 10px;
 }
-.down p{
+#signup .down p{
     margin: 18px;
 }
-.down span{
+#signup .down span{
     color: blue;
     font-weight: 600;
 }
-.downdown{
+#signup .downdown{
     margin-top: 30px;
     font-weight: 600;
     color: gray;
 }
-.downdown a{
+#signup .downdown a{
     text-decoration: none;
     color: blue;
 }
