--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,7 +484,6 @@ padding: 10px;
     border-radius: 5px;
     border: none;
     padding: 5px;
-   
     font-family: 'Tajawal';
 }
 .bookCateFooter h4{
@@ -498,4 +497,35 @@ padding: 10px;
     width: 77%;
     height: 10px;
     margin-top:  10px;
+}
+.fa-close{
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    font-size: 100px;
+    color: white;
+}
+.counter{
+    
+}
+.counterChild{
+    width: 40%;
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+}
+.SmHd{
+    width: 40%;
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+}
+.counterChild button{
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+    height: 40px;
+    width: 40px;
+    border: none;
+    
 }
