--- a/templates/payment_page.html
+++ b/templates/payment_page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../assets/css/payment.css">
 </head>
 <body>
-    <section>
+    <section class="parentCotainer">
         <section id="paymentContainer">
             <div class="paymentInfo" >
                 <form>
