--- a/assets/css/payment.css
+++ b/assets/css/payment.css
@@ -1,55 +1,123 @@
-*{
+body {  
+    margin: 0;  
     padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+    box-sizing: border-box; 
+    font-family: 'Tajawal';
+}  
+  
+@font-face {
+    font-family: 'Tajawal';
+    src: url("../fonts/Tajawal-Regular.ttf");
 }
-
-
-section{
-    width: 100vw;
-    height: 100vh;
+.slidercontainer {  
+   width: 400px;
+    border: 1px solid #e3e4ecff;
+    border-radius: 7px; 
+    margin: auto;  
+    display: flex;
+    flex-wrap: wrap;
+    padding: 15px;
     
-    
-}
-section section{
-    width: 400px !important;
+}  
+ 
+.slidercontainer form{
+ 
     margin: auto;
-    height: 80%;
-	white-space: nowrap;
-	font-size: 0;
-	transition: 0.8s;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-    transition: 0.8s;
     
+}
+.slidercontainer form input{
+    width: 60%;
+    border: 1px solid #e3e4ecff;
+    text-align: right;
+    padding: 8px;
+    border-radius: 7px;
+    color: #e3e4ecff;
+    font-family: 'Tajawal';
+    
+
+}
+.slidercontainer form input:focus{
+    color: #f26b55ff;
+    outline: none;
+    border: 1px solid #f26b55ff;
+}
+.content {  
+    width: 400px;
+    font-size: 30px;  
+    text-align: center; 
+    margin: auto; 
+}  
+ 
+.showSlide{
+    display: none;
+}
+.show{
+  
+    display: block !important;
+    
+
+}
+.fade {  
    
+    display: none !important;  
+   
+
+}  
+.productDesign{
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    width: 80%;
+    margin: auto;
 }
-
-section .paymentInfo{
-    
-    border-radius: 5px;
-    border: 1px solid black;
-	height: 100%;
-	width: 400px;
-    display: inline-block;
-	white-space: normal;
-    height: 100%;
-	width: 100%;
-    
-    
+.total{
+    border-top: 2px solid #e3e4ecff;
 }
+.slidercontainer form label{
+    width: 60%;
+    display: block;
+    margin: auto;
+    font-size: 14px;
+    font-family: 'Tajawal';
+    text-align: right;
+    margin-top: 20px;
+    font-weight: bold;
 
-
-
+}
+ 
+#Ptype{
+    width: 60%;
+   text-align: right;
+   margin: auto;
+}
+#Ptype .fa-cc-visa{
+    color: navy;
+}
+#Ptype .fa-cc-amex{
+    color: blue;
+}
+#Ptype .fa-cc-mastercard{
+    color: red;
+}
+.submit{
+    
+    font-size: 30px;
+    color: #87c255;
+}
+.submit .fa-check-circle-o{
+    font-size: 100px;
+    margin: 0;
+}
 /* stteper */
 :root{
-    --circal-defult:#ccc;
-    --circal-active:green;
+    --circal-defult:#f8f8f8;
+    --circal-active:#87c255;
     --width-active:0;
 }
 .container {
     display: flex;
-    width: 90%;
-    height: 30vh;
+    width: 550px;
+    height: 20vh;
     justify-content: space-between;
     align-items: center;
     position: relative;
@@ -89,6 +157,7 @@ section .paymentInfo{
     
 }
 .progress-active::before{
+    transition: 1s;
     position: absolute;
     content: '';
     top: 50%;
@@ -102,29 +171,55 @@ section .paymentInfo{
     background-color: var(--circal-defult);
     height: 40px;
     width: 40px;
-    color: white;
+    color: #c7c7c7;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 25px;
 }
 .container-btn{
-    width: 50%;
+    width: 100%;
     display: flex;
     justify-content: space-around;
-    margin: auto;
+    margin: 15px auto ;
     align-items: center;
     position: relative;
+    bottom: 0;
 }
 
 .btn{
-background-color: purple;
+background-color: #f26b55ff;
 color: white;
 border: none;
-padding: 20px;
+border-radius: 50px;
+padding: 10px 40px;
+cursor: pointer;  
+font-family: 'Tajawal';
+
 }
 .active{
-    background-color: var(--circal-active);
-    color: white;
-    border: 10px solid var(--circal-defult);
+    transition: 1s;
+    color: var(--circal-active);
+    border: 2px solid var(--circal-active);
+}
+@media only screen and (max-width: 600px){
+  body{
+ overflow-x: hidden;
+    margin: auto;
+  }
+   .slidercontainer{
+       width: 95% !important;
+       margin: auto;
+       display: block;
+ 
+
+   }
+    .container{
+        width: 95% !important;
+        margin: auto;
+
+
+    }
+   
 }
