--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,11 @@ width: 100%;
 .fa-shopping-cart{
     border-radius: 50px;
     margin-right: 35px;
+    padding: 10px;
+    background-color: #eff2f7;
+  text-decoration: none;
+  color: inherit;
+    
 }
 
 .uperfoter{
