--- a/templates/payment_page.html
+++ b/templates/payment_page.html
@@ -152,6 +152,11 @@
             <button class="btn" id="butNext">التالي</button>
         </div>
 
+        <div class="close">
+            <a class="fa fa-close" href="../index.html"></a>
+        </div>
+        
+
     </div>
 
 
