--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,158 +174,48 @@ form .fa-lock{
 }
 
 
-/* SLIDER */
-.CSSgal {
-    direction: ltr;
-	position: relative;
-	overflow: hidden;
-	height: 100%; /* Or set a fixed height */
-    overflow: hidden;
-    margin: 1.5em 0;
+/* Slider */
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 98%;
+    margin: auto;
 }
 
 
 
-.CSSgal .slider {
-	height: 80%;
-	white-space: nowrap;
-	font-size: 0;
-	transition: 0.8s;
+.slider {
+    display: none;
+    text-align: center;
 }
 
-
-
-.CSSgal .slider > * {
-	font-size: 1rem;
-	display: inline-block;
-	white-space: normal;
-	vertical-align: top;
-	height: 100%;
-	width: 100%;
-	background: none 50% no-repeat;
-	background-size: cover;
-}
-.CSSgal img{
+.slider img {
     width: 90%;
     height: 60vh;
 }
-/* PREV/NEXT, CONTAINERS & ANCHORS */
 
-.CSSgal .prevNext {
-	position: absolute;
-	z-index: 1;
-	top: 40%;
-	width: 100%;
-	height: 0;
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    top: 20;
+    background-color: #bbb;
+    display: inline-block;
+    transition: background-color 0.6s ease;
 }
 
-.CSSgal .prevNext > div+div {
-	visibility: hidden; /* Hide all but first P/N container */
+
+.sliderArrow {
+    font-size: 60px !important;
 }
 
-.CSSgal .prevNext a {
-    vertical-align: middle;
-    fill: rgba(0,0,0,.5);
-    
-    font-size: 5em;
-	position: absolute;
-	width:40px;
-	height:40px;
-	text-align: center;
-	transition: 0.3s;
-    
-	left: 9%;
-	
-    
+.active {
+    background-color: #717171;
 }
 
-.CSSgal .prevNext a+a {
-	left: 88%;
-	right: 0;
-}
 
-/* NAVIGATION */
-
-.CSSgal .bullets {
-	position: absolute;
-	z-index: 2;
-	bottom: 0;
-	padding: 10px 0;
-	width: 100%;
-	text-align: center;
-}
-.CSSgal .bullets > a {
-	display: inline-block;
-	width:15px;
-	height:15px;
-    border: 1px solid #ccc;
-    border-radius: 2px;
-    background: rgba(0,0,0,.3);
-	text-decoration: none;
-	text-align: center;
-	transition: 0.3s;
-}
-.CSSgal .bullets > a+a {
-	background: white; /* Dim all but first */
-}
-.CSSgal .bullets > a:hover {
-	background: white !important;
-}
-
-/* NAVIGATION BUTTONS */
-/* ALL: */
-.CSSgal >s:target ~ .bullets >* {      background: rgba(255, 255, 255, 0.5);}
-/* ACTIVE */
-#s1:target ~ .bullets >*:nth-child(1) {background: white}
-#s2:target ~ .bullets >*:nth-child(2) {background: white}
-#s3:target ~ .bullets >*:nth-child(3) {background: white}
-#s4:target ~ .bullets >*:nth-child(4) {background: white}
-#s5:target ~ .bullets >*:nth-child(5) {background: white}
-#s6:target ~ .bullets >*:nth-child(6) {background: white}
-#s7:target ~ .bullets >*:nth-child(7) {background: white}
-/* More slides? Add here more rules */
-
-/* PREV/NEXT CONTAINERS VISIBILITY */
-/* ALL: */
-.CSSgal >s:target ~ .prevNext >* {      visibility: hidden;}
-/* ACTIVE: */
-#s1:target ~ .prevNext >*:nth-child(1) {visibility: visible;}
-#s2:target ~ .prevNext >*:nth-child(2) {visibility: visible;}
-#s3:target ~ .prevNext >*:nth-child(3) {visibility: visible;}
-#s4:target ~ .prevNext >*:nth-child(4) {visibility: visible;}
-#s5:target ~ .prevNext >*:nth-child(5) {visibility: visible;}
-#s6:target ~ .prevNext >*:nth-child(6) {visibility: visible;}
-#s7:target ~ .prevNext >*:nth-child(7) {visibility: visible;}
-/* More slides? Add here more rules */
-
-/* SLIDER ANIMATION POSITIONS */
-
-#s1:target ~ .slider {transform: translateX(   0%); -webkit-transform: translateX(   0%);}
-#s2:target ~ .slider {transform: translateX(-100%); -webkit-transform: translateX(-100%);}
-#s3:target ~ .slider {transform: translateX(-200%); -webkit-transform: translateX(-200%);}
-#s4:target ~ .slider {transform: translateX(-300%); -webkit-transform: translateX(-300%);}
-#s5:target ~ .slider {transform: translateX(-400%); -webkit-transform: translateX(-400%);}
-#s6:target ~ .slider {transform: translateX(-500%); -webkit-transform: translateX(-500%);}
-#s7:target ~ .slider {transform: translateX(-600%); -webkit-transform: translateX(-600%);}
-/* More slides? Add here more rules */
-
-
-/* YOU'RE THE DESIGNER! 
-   ____________________
-   All above was mainly to get it working :)
-   CSSgal CUSTOM STYLES / OVERRIDES HERE: */
-
-.CSSgal{
-	color: #fff;	
-	text-align: center;
-}
-
-.CSSgal a {
-	border-radius: 5px;
-	margin: 0 3px;
-	color: rgba(0,0,0,0.8);
-	text-decoration: none;
-}
+/* End Slider */
 .categoriesSec{
     display: flex;
     flex-wrap: wrap;
@@ -588,4 +478,9 @@ padding: 10px;
 }
 .visible{
     display: block;
+}
+@media only screen and (max-width: 800px){
+.categoriesSec{
+    display: none;
+}
 }
