--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -3,23 +3,33 @@
 #login-model{
     font-family: 'Tajawal';
     height: 100vh;
-    background-color: #0e0e0e;
-    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0);
+    opacity: 0.9;
     align-items: center;
     margin: auto;
+    display: none;
 }
+
 #login-model div{
     width: 500px;
     overflow: hidden;
     margin: auto;
     text-align: center;
     background-color: white;
+   
 }
+
 .loginForm p, .loginForm button{
     font-family: 'Tajawal';
 }
 .loginForm{
     background-color: white;
+    
 }
 #login-model h3{
     margin-bottom: 40px;
@@ -52,7 +62,7 @@ font-size: 20px;
     color: inherit;
     border-radius: 5px;
     padding: 8px;
-   
+    cursor: pointer;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 .loginForm .down{
@@ -66,4 +76,9 @@ font-size: 20px;
 .loginForm input ,.loginForm a{
     font-family: 'Tajawal';
     margin: 5px auto;
+}
+@media only screen and (max-width: 800px){
+    #login-model{
+        width: 100% !important;
+    } 
 }
