--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -1,9 +1,17 @@
 
 
 #signup{
-    width: 100%;
-   
-    background-color: black;
+    font-family: 'Tajawal';
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0);
+    opacity: 0.9;
+    align-items: center;
+    margin: auto;
     display: none;
 }
 #signup form{
@@ -86,4 +94,5 @@
 #signup .downdown a{
     text-decoration: none;
     color: blue;
+    cursor: pointer;
 }
