--- a/templates/payment_page.html
+++ b/templates/payment_page.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+<header></header>
     <div class="container">
 
         <div class="progress" id="progress"></div>
@@ -163,6 +163,7 @@
 
 
     <script src="../assets/js/payment.js"></script>
+    <footer></footer>
 </body>
 
 </html>
