--- a/assets/css/payment.css
+++ b/assets/css/payment.css
@@ -3,18 +3,23 @@ body {
     padding: 0;
     box-sizing: border-box; 
     font-family: 'Tajawal';
+   
 }  
+
+
   
 @font-face {
     font-family: 'Tajawal';
     src: url("../fonts/Tajawal-Regular.ttf");
 }
 .slidercontainer {  
+    direction: ltr;
    width: 400px;
     border: 1px solid #e3e4ecff;
     border-radius: 7px; 
-    margin: auto;  
+    margin: 20px auto;  
     display: flex;
+
     flex-wrap: wrap;
     padding: 15px;
     
@@ -47,7 +52,9 @@ body {
     text-align: center; 
     margin: auto; 
 }  
- 
+ #CArt{
+     margin: auto;
+ }
 .showSlide{
     display: none;
 }
@@ -68,7 +75,7 @@ body {
     justify-content: space-between;
     font-size: 18px;
     width: 80%;
-    margin: auto;
+    margin: 10px auto;
 }
 .total{
     border-top: 2px solid #e3e4ecff;
@@ -115,6 +122,7 @@ body {
     --width-active:0;
 }
 .container {
+    direction: ltr;
     display: flex;
     width: 550px;
     height: 20vh;
@@ -203,25 +211,8 @@ font-family: 'Tajawal';
     color: var(--circal-active);
     border: 2px solid var(--circal-active);
 }
-.close{
-    height: 35px;
-    width: 35px;
-   
-    position: absolute;
-    top:25px;
-    right:30px;
-  border: 1px solid #f26b55ff;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  
-}
-.close a{
-    color: #f26b55ff;
-    text-decoration: none;
-}
+
+
 @media only screen and (max-width: 600px){
   body{
  overflow-x: hidden;
@@ -235,9 +226,6 @@ font-family: 'Tajawal';
         width: 95% !important;
         margin: auto;
  }
- .close{
-     top: 15px;
-     right: 45%;
- }
+ 
    
 }
