--- a/templates/payment_page.html
+++ b/templates/payment_page.html
@@ -62,7 +62,7 @@
 
             <div class="logo">
 
-               <a href="index.html"><img src="../assets/images/svg/logo.svg" width="180px" alt=""></a> 
+               <a href="../index.html"><img src="../assets/images/svg/logo.svg" width="180px" alt=""></a> 
             </div>
             <div class="search-div">
 
